<resources>
    <string name="default_web_client_id" translatable="false">399819984290-4irerqtpbo635s7nlsf88o8h4jkih45e.apps.googleusercontent.com</string>
    <string name="app_name" translatable="false">PokePlace</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">user@gmail.com</string>
    <string name="nav_header_desc">User photo</string>
    <!--Config-->
    <string name="default_name">User</string>
    <string name="default_image" translatable="false">icon1</string>
    <!--Menus-->
    <string name="menu_pokedex">Pokédex</string>
    <string name="menu_teams">Teams</string>
    <string name="menu_type_calculator">Type Calculator</string>
    <string name="title_activity_pokemon_details">Pokémon Details</string>
    <string name="title_info">Info</string>
    <string name="title_stats">Stats</string>
    <string name="title_moves">Moves</string>
    <string name="action_settings">Settings</string>
    <string name="edit_user">Edit Profile</string>
    <string name="action_add_to_team">Add to team</string>
    <string name="action_credits">Credits</string>
    <string name="action_remove_team">Delete team</string>
    <string name="action_edit_team">Edit team</string>
    <string name="action_change_name">Change name</string>

    <!--Acciones-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="go_back">Return</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="delete">Borrar</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--Inicio sesión y registro-->
    <string name="error_empty_email">Email can\'t be empty</string>
    <string name="error_empty_password">Password can\'t be empty</string>
    <string name="error_email">Email is not valid</string>
    <string name="error_password_length">Password must be 6 characters length minimum</string>
    <string name="error_login">Login error</string>
    <string name="error_login_api">API error when trying to log in</string>
    <string name="error_register_email">Registration failed, email is not valid</string>
    <string name="error_register_exists">Registration failed, an user with that email already exists</string>
    <string name="error_register">Registration failed</string>
    <string name="error_login_credentials">Login failed. Incorrect credentials</string>
    <string name="successful_register">Successful registration. You can now log in</string>
    <string name="error_logout">Logout error</string>
    <string name="reset_password">Reset my password</string>
    <string name="enter_mail">Enter your mail address</string>
    <string name="mail_sent">Mail to reset your password sent. Check your inbox</string>
    <string name="error_sending_mail">Error sending mail to reset password</string>
    <string name="user_error">Error, user not found</string>
    <!--Manejo respuesta PokeApi-->
    <string name="error_api_request">API request error</string>
    <string name="error_api_response">API response error</string>
    <!--Manejo lectura JSON-->
    <string name="error_json_empty">No Pokémon found</string>
    <string name="error_no_json">Pokémon file not found</string>
    <!--Pokedex-->
    <string name="search_name">Search by name</string>
    <string name="search_type">Search by type</string>
    <string name="all_types">All types</string>
    <string name="pokemon" translatable="false">Pokémon</string>
    <!--Detalles-->
    <string name="height">Height: %1$s%2$s</string>
    <string name="weight">Weight: %1$s%2$s</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="version">Version</string>
    <string name="left_arrow">Left arrow</string>
    <string name="right_arrow">Left arrow</string>
    <string name="pokedexNumberPlaceholder" translatable="false">000</string>
    <string name="sound">Sound</string>
    <string name="zero" translatable="false">0</string>
    <!--Stats-->
    <string name="stats_title">%1$s\'S STATS</string> <!--%1$s means that a parameter will be expected to be placed there-->
    <string name="stat">Stat</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="special_attack">Special Attack</string>
    <string name="special_defense">Special Defense</string>
    <string name="speed">Speed</string>
    <string name="total">Total: %1$d</string>
    <!--Moves-->
    <string name="moves_title">%1$s\'S MOVES</string>
    <string name="power">Power</string>
    <string name="accuracy">Accuracy</string>
    <string name="category">Category</string>
    <string name="pp">PP</string>
    <string name="moves">Moves</string>
    <string name="status">Status</string>
    <string name="physical">Physical</string>
    <string name="special">Special</string>
    <string name="no_moves_for_type">No %1$s type moves</string>
    <!--Equipos-->
    <string name="create_team">Create team</string>
    <string name="team_name">Enter the team name</string>
    <string name="team_name_placeholder">Name</string>
    <string name="error_empty_name">Name can\'t be empty</string>
    <string name="teams_limit">10 teams limit reached</string>
    <string name="team_size_limit">Full team</string>
    <string name="no_teams">You don\'t have teams</string>
    <string name="error_no_teams">You don\'t have teams. You can create one in "Teams"</string>
    <string name="added_to">added to</string>
    <string name="remove_team_warning">Are you sure you want to delete</string>
    <string name="team_removed">deleted</string>
    <string name="error_add_to_team">Error adding Pokémon to team</string>
    <string name="no_pokemons_in_team">There are no Pókemon in %1$s</string>
    <string name="choose_pokemon">Choose a Pokémon</string>
    <string name="delete_pokemon_warning">Are you sure you want to delete %1$s?</string>
    <string name="enter_new_nam_for">Enter new name for %1$s</string>
    <string name="error_pokemon_not_available">Pokémon not loaded yet</string>
    <!--Calculadora tipos-->
    <string name="type_calculator">Type Calculator</string>
    <string name="type_chart">Type Chart</string>
    <string name="type">Type</string>
    <string name="attacker">Attacker</string>
    <string name="defender">Defender</string>
    <string name="simple">Simple</string>
    <string name="advanced">Advanced</string>
    <string name="effective">Super effective</string>
    <string name="not_effective">Not very effective</string>
    <string name="normal">Normal</string>
    <string name="no_effect">No effect</string>
    <string name="attacker_x4">%1$s deals x4 damage to</string>
    <string name="attacker_x2">%1$s deals x2 damage to</string>
    <string name="attacker_x0.5">%1$s deals x0.5 damage to</string>
    <string name="attacker_x0.25">%1$s deals x0.25 damage to</string>
    <string name="attacker_x0">%1$s deals x0 damage to</string>
    <string name="attacker_x1">%1$s deals x1 damage to</string>
    <string name="defender_x4">%1$s suffers x4 damage from</string>
    <string name="defender_x2">%1$s suffers x2 damage from</string>
    <string name="defender_x0.5">%1$s suffers x0.5 damage from</string>
    <string name="defender_x0.25">%1$s suffers x0.25 damage from</string>
    <string name="defender_x0">%1$s suffers x0 damage from</string>
    <string name="defender_x1">%1$s suffers x1 damage from</string>
    <!--Edit User-->
    <string name="change_name">Change name</string>
    <string name="change_image">Change image</string>
    <string name="save_changes">Save changes</string>
    <string name="new_user_name">Enter your user name</string>
    <string name="choose_option">Choose an option</string>
    <string name="camera">Take picture</string>
    <string name="gallery">Choose from gallery</string>
    <string name="url">Enter URL</string>
    <string name="choose_icon">Choose default icon</string>
    <string name="restore_image">Restore default image</string>
    <string name="picture">image</string>
    <string name="choose_your_icon">Choose your icon</string>
    <string name="type_url">Enter a URL</string>
    <string name="url_not_valid">URL not valid or not an image</string>
    <string name="not_supported">Format not supported</string>
    <string name="gif_gallery">GIF are only supported with URL</string>
    <string name="fav_type">Favorite type: </string>
    <string name="fav_pokemon">Favorite Pokémon: </string>
    <string name="choose_fav_type">Choose favorite type</string>
    <string name="choose_fav_pokemon">Choose favorite Pokemon</string>
    <string name="field_not_set">(Not set)</string>
    <string name="choose_your_fav_type">Choose your favorite type</string>
    <string name="choose_your_fav_pokemon">Choose your favorite Pokemon</string>
    <string name="search_your_pokemon">Search your favorite Pokémon…</string>
    <string name="error_setting_fav">Error setting favorite</string>
    <string name="clear_fav_type">Clear favorite type</string>
    <string name="clear_fav_pokemon">Clear favorite Pokemon</string>
    <string name="marked_as_fav">%1$s set as favorite</string>
    <string name="removed_from_favorite">%1$s removed from favorite</string>
    <string name="delete_user_warning">Are you sure do you want to delete your user?</string>
    <string name="delete_user_warning2">This action can not be undone. All your profile information and teams will be lost. Do you want to continue?</string>
    <string name="user_deleted">User deleted successfully</string>
    <string name="error_deleting_user">Error deleting user</string>
    <string name="error_reauth">Error reauthenticating, cannot delete user</string>
    <string name="enter_password">Enter your password</string>
    <!--Permissions-->
    <string name="storage_permission_denied">Storage permissions denied</string>
    <string name="camera_permission_denied">Camera permissions denied</string>
    <!--website-->
    <string name="pokeplaceweb" translatable="false">PokéPlace Web</string>
    <string name="pokeplaceweb_url" translatable="false">https://danielmonforteibias.github.io/PokePlaceWeb/</string>
    <!--Credits-->
    <string name="author">Author: Daniel Monforte Ibias</string>
    <string name="credits_details">App developed as a final project for 2º DAM 2024/2025</string>
    <!--Settings-->
    <string name="settings_title">Settings</string>
    <string name="preferences" translatable="false">Preferences</string>
    <string name="language_warning">Warning: Some texts such as Pokémon descriptions, types or movements names are only available in English</string>
    <string name="language_header">Language</string>
    <string name="theme_header">App Theme</string>
    <string name="dark_theme_enabled">Dark theme</string>
    <string name="app_language">App language</string>
    <!--Descriptions-->
    <string name="sprite">Sprite</string>

    <!--Firestore-->
    <string name="error_syncing_teams_size">Error syncing %1$s, teams limit reached</string>
    <string name="error_syncing_no_connection">Couldn\'t sync data from the cloud. Check your Internet connection</string>
</resources>