<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_edit_user"
        android:orderInCategory="100"
        android:title="@string/edit_user"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="200"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_pokeplaceweb"
        android:orderInCategory="300"
        android:title="@string/pokeplaceweb"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_credits"
        android:orderInCategory="400"
        android:title="@string/action_credits"
        app:showAsAction="never" />
</menu>