<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:gravity="center|top"
    android:padding="20dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtChangeImageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_option"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/buttonsDialogChangeImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnGalleryChangeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/gallery" />
        <Button
            android:id="@+id/btnCameraChangeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/camera" />
        <Button
            android:id="@+id/btnUrlChangeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/url" />
        <Button
            android:id="@+id/btnChooseIconChangeImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/choose_icon" />
    </LinearLayout>
    <Button
        android:id="@+id/btnCancelChangeImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_gravity="end"
        android:text="@string/cancel" />
</LinearLayout>