<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_info">

    <fragment
        android:id="@+id/navigation_info"
        android:name="dam.tfg.pokeplace.ui.detailsActivityFragments.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="dam.tfg.pokeplace.ui.detailsActivityFragments.StatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@+id/navigation_moves"
        android:name="dam.tfg.pokeplace.ui.detailsActivityFragments.MovesFragment"
        android:label="@string/title_moves"
        tools:layout="@layout/fragment_moves" />
</navigation>