<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:gravity="center|top"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtEnterPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editTextEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="25sp"/>

    <LinearLayout
        android:id="@+id/buttonsDialogEnterPassword"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancelEnterPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/btnAcceptEnterPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept" />
    </LinearLayout>
</LinearLayout>