<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:gravity="center|top"
    android:padding="20dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtChangeFavTypeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_your_fav_type"
        android:textSize="30sp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />
    <Spinner
        android:id="@+id/spinnerFavTypes"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:spinnerMode="dropdown" />
    <Button
        android:id="@+id/btnClearFavType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/clear_fav_type" />
    <LinearLayout
        android:id="@+id/buttonsDialogChangeFavType"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancelChangeFavType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/btnAcceptChangeFavType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept" />
    </LinearLayout>
</LinearLayout>