<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:gravity="center|top"
    android:padding="20dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtRemoveTeamTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_team_warning"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/buttonsDialogRemoveTeam"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancelRemoveTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/no" />
        <Button
            android:id="@+id/btnAcceptRemoveTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />
    </LinearLayout>
</LinearLayout>