<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:padding="20dp"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtDeleteUserTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/delete_user_warning"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold" />
    <LinearLayout
        android:id="@+id/buttonsDialogDeleteUser"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancelDeleteUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/no" />
        <Button
            android:id="@+id/btnAcceptDeleteUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />
    </LinearLayout>

</LinearLayout>