<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/txtChangeIconTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/choose_your_icon"
        android:textSize="30sp"
        android:textStyle="bold" />
    <Spinner
        android:id="@+id/spinnerIcons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:id="@+id/buttonsDialogChangeIcon"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="end"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCancelChangeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel" />
        <Button
            android:id="@+id/btnAcceptChangeIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/accept" />
    </LinearLayout>
</LinearLayout>